--- a/app.wxss
+++ b/app.wxss
@@ -3,8 +3,9 @@
   height: 100%;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: left;
   justify-content: space-between;
-  padding: 200rpx 0;
+  padding: 50rpx ;
   box-sizing: border-box;
+  background-color: blanchedalmond;
 } 
